sandc/test/fixtures/astRegression/shouldFail/productions/ifTypeGuardPseudex/StatementInPlaceOfPseudex.sand
pub class StatementInPlaceOfPseudex {
    foo() {
        let a = if let b = c {
            foo();
        } else {
            foo();
        };
    }
}